#23 Hyperlinks are now more visible + other related fixes
Hyperlinks now become underlined when hovered over, specifically on cards and in the footer.

Topic links in cards while in light mode have a new colour variable, dark mode remained the same colour.

Fixed an issue where clicking anything in the same row as the topic would take you to the topic rather than the episode.

Introduced a better way of clipping long episode descriptions.

Applied changes to the compact card view as well.

--- a/components/stylesheets/Card.module.css
+++ b/components/stylesheets/Card.module.css
@@ -10,6 +10,7 @@
     box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
     transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
     z-index: 1;
+    cursor: pointer;
 }
 
 .card:first-of-type {
@@ -24,10 +25,6 @@
     transform: translateY(-5px);
     -o-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
     box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-}
-
-.image, .title, .description, .timeStamps {
-    cursor: pointer;
 }
 
 .author {
@@ -61,6 +58,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     padding: 25px;
 }
 
@@ -69,22 +67,22 @@
 }
 
 .tag {
-    color: var(--link-color);
+    color: var(--card-tag-color);
     font-size: 14px;
     font-weight: 600;
     text-decoration: none;
     letter-spacing: 0.2px;
-    line-height: 1.3;
-    -webkit-line-clamp: 1;
-    width: calc(100% - 40px);
-    min-height: 20.2px;
-    max-height: 20.2px;
+    height: 20.2px;
     margin-bottom: 5px;
-    white-space: nowrap;
+    display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.tag:hover {
+    text-decoration: underline;
 }
 
 .title {
