--- a/components/stylesheets/CompactCard.module.css
+++ b/components/stylesheets/CompactCard.module.css
@@ -11,16 +11,13 @@
     box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
     transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
     z-index: 1;
+    cursor: pointer;
 }
 
 .card:hover {
     transform: translateY(-5px);
     -o-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
     box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-}
-
-.image, .title, .description, .timeStamps {
-    cursor: pointer;
 }
 
 .image {
@@ -58,14 +55,12 @@
 }
 
 .tag {
-    color: var(--link-color);
+    color: var(--card-tag-color);
     font-size: 14px;
     font-weight: 600;
     text-decoration: none;
     letter-spacing: 0.2px;
     line-height: 1.3;
-    -webkit-line-clamp: 1;
-    width: calc(100% - 40px);
     min-height: 20.2px;
     max-height: 20.2px;
     white-space: nowrap;
@@ -73,6 +68,10 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.tag:hover {
+    text-decoration: underline;
 }
 
 .title {
@@ -85,11 +84,17 @@
 }
 
 .description {
-    /* flex: 2; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
 
 .timeStamps {
+    flex: 1;
     color: var(--titles-color);
+    text-align: end;
     letter-spacing: 0.2px;
     font-size: 0.875rem;
     white-space: nowrap;
