--- a/components/stylesheets/EpisodeList.module.css
+++ b/components/stylesheets/EpisodeList.module.css
@@ -46,3 +46,9 @@
         padding: 70px 20px 20px 20px;
     }
 }
+
+@media only screen and (max-width: 355px) {
+    .episodeList {
+        padding: 70px 0 20px 0;
+    }
+}
